# mprpc

./: CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake
example/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  friend.pb.cc  friend.pb.h  friend.proto  user.pb.cc  user.pb.h  user.proto
example/callee/: CMakeLists.txt  Makefile  cmake_install.cmake  friendservice.cc  userservice.cc
example/caller/: Makefile  callfriendservice.cc  calluserservice.cc  cmake_install.cmake
logs/: 2024-11-11-log.txt
src/: CMakeLists.txt  Makefile  cmake_install.cmake  logger.cc  mprpcapplication.cc  mprpcchannel.cc  mprpcconfig.cc  mprpccontroller.cc  mprpcprovider.cc  rpcprovider.cc  zookeeperutil.cc
src/include/: lockqueue.h  logger.h  mprpcapplication.h  mprpcchannel.h  mprpcconfig.h  mprpccontroller.h  mprpcprovider.h  rpcprovider.h  zookeeperutil.h
test/: test_openfile  test_openfile.cc
test/protobuf/: a.out  main.cc  test.pb.cc  test.pb.h  test.proto
